--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
 # ignore everything in the root except the "wp-content" directory.
 !wp-content/
+/.htaccess
+/.npmignore
+/.project
+/.revision
+/.settings/
+/__pma__/
+/__srdb__/
+/_pma_/
+/_srdb_/
+/deploy-config.php
+/gruntfile.js
+/node_modules/
+/package.json
+/phpmyadmin/
+/phpMyAdmin*
+/Search-Replace-DB-master/
+/sitemap.xml
+/sitemap.xml.gz
 
 # ignore everything in the "wp-content" directory, except:
 # "mu-plugins", "plugins", "themes" directory
@@ -17,10 +35,29 @@ wp-content/themes/twenty*/
 # ignore node dependency directories
 node_modules/
 
+# WordPress core
+/wp-config.php
+/wp-content/upgrade/
+/wp-content/uploads/
+
+# WordPress plugins
+/wp-content/advanced-cache.php
+/wp-content/backup-db/
+/wp-content/backups/
+/wp-content/blogs.dir/
+/wp-content/cache/
+/wp-content/gallery/
+/wp-content/wp-cache-config.php
+
+# Lyquix WordPress theme
+/wp-content/themes/portfolio/css/node_modules/
+/wp-content/themes/portfolio/css/.npmignore
+/wp-content/themes/portfolio/css/gruntfile.js
+/wp-content/themes/portfolio/css/package.json
+/wp-content/themes/portfolio/node_modules/
+
+
 # ignore log files and databases
 *.log
 *.sql
 *.sqlite
-
-#ignore images
-*.jpg
